--- a/05_DOM/1.html
+++ b/05_DOM/1.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Dom Learning</title>
+    <style>
+        .bg-black{
+            background-color: black;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning on github repo</h1>
-        <p>Lorem ipsum dolor adipisicing elit. Neque, reiciendis.</p>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning on github repo</h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor adipisicing elit. <span style="display: none;">
+            test text
+        </span></p>
     </div>
 </body>
 </html>
